--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World, we are Software Developers!</p>
+    <p>Hello World!</p>
 </body>
 </html>
