--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1 id="title">Survey Form</h1>
     <p id="description">A short survey on smartphones</p>
-    <p>Hello World!</p>
+    <form id="survey-form">
+        <label for="name">Enter your name</label>
+        <input type="text" id="name" name="name"><br><br>
+    </form>
 </body>
 </html>
