--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <form id="survey-form">
         <label for="name">Enter your name</label>
         <input type="text" id="name" name="name"><br><br>
+        <input type="email" id="email" name="emailid" placeholder="Enter your email"><br>
+
     </form>
 </body>
 </html>
