--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         <option value="Blackberry">Blackberry</option>
         <option value="Windows">Windows</option>
         </select><br><br>
+        <div class="form-group">
+            <p id="quest">Give us your feedback</p>
+            <textarea name="feedback"
+             id="feedback" cols="30"
+             rows="6"
+             class="textarea"
+             placeholder="Enter your feedback here....."></textarea>
+
+        </div>
         <input type="submit" value="Submit Now!">
     </form>
 </body>
